charts/workflows/test-policy/pod-hostpath/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: hostpath
spec:
  steps:
  - try:
    - apply:
        resource:
          apiVersion: v1
          kind: Namespace
          metadata:
            name: test-hostpath
            labels:
              app.kubernetes.io/managed-by: sessionspaces
    - apply:
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: sessionspaces
            namespace: test-hostpath
            labels:
              app.kubernetes.io/managed-by: sessionspaces
          data:
            dataDirectory: "/allowed/path"
            gid: "1234"
    - create:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: allowed
            namespace: test-hostpath
          spec:
            containers:
            - name: nginx
              image: nginx:latest
            volumes:
            - name: test-volume
              hostPath:
                path: "/allowed/path"
    - error:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: disallowed
            namespace: test-hostpath
          spec:
            containers:
            - name: nginx
              image: nginx:latest
            volumes:
            - name: test-volume
              hostPath:
                path: "/disallowed/path"
